--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd client && npm run build --prod && cp -r build ../",
-    "deploy": "git push heroku master",
+    "deploy": "git push origin master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
     "logs:prod": "heroku logs --tail",
     "dev": "node_modules/.bin/nodemon app.js",
